finished markup for store left only some bugs

--- a/frontend/gtuShop/src/app/store/store-main/store-main.component.html
+++ b/frontend/gtuShop/src/app/store/store-main/store-main.component.html
@@ -32,10 +32,12 @@
           <div class="col-12" style="padding: 0px;">
                 <router-outlet></router-outlet>
           </div>
+ 
       </div>
     </div>
-
   </div>
-
 </div>
+<app-site-offers></app-site-offers>
+<app-footer></app-footer>  
+
 
