--- a/frontend/gtuShop/src/app/store/store-main/site-offers/site-offers.component.html
+++ b/frontend/gtuShop/src/app/store/store-main/site-offers/site-offers.component.html
@@ -4,7 +4,7 @@
         <div class="row pl-0">
             <div class="col-4 pr-0">
                  <div class="offers  d-flex align-items-center justify-content-center">
-                        <div class="info">
+                        <div class="info text-center">
                         <fa-icon [icon]="plane" class="custom-svg"></fa-icon>
                             <span>Free Shipping</span>
                             <p>on orders over $100</p>
@@ -13,7 +13,7 @@
             </div>
             <div class="col-4">
                     <div class="offers  d-flex align-items-center justify-content-center">
-                        <div class="info">
+                        <div class="info text-center">
                         <fa-icon [icon]="faGlobeAmericas" class="custom-svg"></fa-icon>
                                 <span>Free Shipping</span>
                                 <p>on orders over $100</p>
@@ -22,7 +22,7 @@
             </div>
             <div class="col-4">
                     <div class="offers  d-flex align-items-center justify-content-center">
-                         <div class="info">
+                         <div class="info text-center">
                         <fa-icon [icon]="faThumbsUp" class="custom-svg"></fa-icon>
                              <span>Free Shipping</span>
                              <p>on orders over $100</p>
