--- a/frontend/gtuShop/src/variables.scss
+++ b/frontend/gtuShop/src/variables.scss
@@ -3,8 +3,10 @@
 
 //Variables
 
-$white: #fff;
-$light-grey:  #a3a3a3;
+$white:     #fff;
+$light-grey:#a3a3a3;
 $soft-blue: #34b1da;
 $soft-grey: #f2f2f2;
-$dark-brown: #464646;
+$dark-brown:#464646;
+$soft-grey: #ced4da;
+$light-green: #17a2b8;
