--- a/frontend/gtuShop/src/app/store/store-main/header-navigation/header-navigation.component.html
+++ b/frontend/gtuShop/src/app/store/store-main/header-navigation/header-navigation.component.html
@@ -12,7 +12,7 @@
                     <a >Wish List(0)</a>
                 </div>
 
-                <div class="sub-nav">
+                <div class="sub-nav" [routerLink]='["/panel"]'>
                     <fa-icon [icon]="faUser" class="custom-svg"></fa-icon>
                     <a >My account</a>
                 </div>
