--- a/frontend/gtuShop/src/app/store/store-main/left-navigation/categories/categories.component.html
+++ b/frontend/gtuShop/src/app/store/store-main/left-navigation/categories/categories.component.html
@@ -16,14 +16,9 @@
             </div>
        
         </div>
-        <div class="d-flex mt-3 list">
+        <div class="d-flex mt-3 list" *ngIf='( $categories | async ) as categories '>
             <ul>
-                <li><a href="">TV & Video</a></li>
-                <li><a href="" class="active">Mobile</a></li>
-                <li><a href="">Computing</a></li>
-                <li><a href="">Cameras </a></li>
-                <li><a href="">Kitchen Appliances</a></li>
-                <li><a href="">Household Items</a></li>
+                <li  *ngFor='let cat of categories' ><a [routerLink]="['items/',cat.alias]">{{ cat.name }}</a></li>
             </ul>
         </div>
     </div>
