--- a/frontend/gtuShop/src/app/store/store-main/store-items/store-item/store-item.component.html
+++ b/frontend/gtuShop/src/app/store/store-main/store-items/store-item/store-item.component.html
@@ -1,8 +1,9 @@
 <div class="row mt-3" >
-    <div class="col-4  mb-3" *ngFor='let item of products '>
+    <div class="col-lg-4  mb-3" *ngFor='let item of products '>
         <div class="item-box">
-            <div class="item-box-image">
-                <img src="assets/img/pc1.png" alt="item">
+            <div class="item-box-image" >
+                <img [src]="item['images'][0] ? 
+                'http://localhost:3000' + item['images'][0]['image']['url'] :'assets/img/pc1.png'" alt="item">
             </div>
             <div class="item-box-price pl-2">
                 <h5 *ngIf='item.price'>${{ item.price  }}</h5>
@@ -10,6 +11,7 @@
             <div class="item-text-headline pl-2">
                 <span *ngIf='item.title'>{{ item.title  }}</span>
             </div>
+
             <div class="item-text-description pl-2">
                 <p *ngIf='item.description'>{{ item.description }}</p>
             </div>
