--- a/frontend/src/app/store/store-main/store-items/store-item/store-item.component.html
+++ b/frontend/src/app/store/store-main/store-items/store-item/store-item.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf='loading'>
     <div class="row mt-3" >
-        <div class="col-4  mb-3" *ngFor='let item of products '>
-            <div class="item-box">
-                <div class="item-box-image">
-                    <img src="assets/img/pc1.png" alt="item">
+        <div class="col-4  mb-3" *ngFor='let item of products ' style="height: 264px;">
+            <div class="item-box" style="height: 100%;">
+                <div class="item-box-image" [routerLink]='["/store/item/"+item.id]' style="width: 100%; cursor: pointer;"> 
+                    <img [src]="item.images.length > 0 ? item.images[0].image.url : 'assets/img/pc1.png'" alt="item">
                 </div>
                 <div class="item-box-price pl-2">
-                    <h5 *ngIf='item.price'>${{ item.price  }}</h5>
+                    <h5 *ngIf='item.price'>{{ item.price  }}</h5>
                 </div>
                 <div class="item-text-headline pl-2">
                     <span *ngIf='item.title'>{{ item.title  }}</span>
@@ -17,7 +17,7 @@
                 <div class="row pl-2">
                     <div class="col-2">
                         <fa-icon [icon]="faShoppingCart" class="custom-svg"></fa-icon>
-                    </div>
+                    </div>  
                     <div class="col-2">
                         <fa-icon [icon]="faHeart" class="custom-svg"></fa-icon>
                     </div>
@@ -36,3 +36,6 @@
 <ng-container *ngIf='!loading'>
   <app-spinner></app-spinner>
 </ng-container>
+
+
+ 
