--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,8 @@
 .is-invalid {
     background-image: none !important;
 }
+
+@font-face {
+    font-family: 'long';
+    src: url('assets/fonts/YeonSung-Regular.ttf') format('.ttf');
+}
