/**  added shared component and made some little changes   **/

--- a/frontend/src/app/store/store-main/store-item-detailed/store-item-detailed.component.html
+++ b/frontend/src/app/store/store-main/store-item-detailed/store-item-detailed.component.html
@@ -1,1 +1,3 @@
-<p>store-item-detailed works!</p>
+<div *ngIf='( $product | async ) as product '>
+     <app-slider [images]='product.images'></app-slider>
+</div>
