--- a/frontend/src/app/store/store-main/left-navigation/categories/categories.component.html
+++ b/frontend/src/app/store/store-main/left-navigation/categories/categories.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="d-flex mt-3 list" *ngIf='( $categories | async ) as categories '>
             <ul>
-                <li  *ngFor='let cat of categories' ><a [routerLink]="['items/',cat.alias]">{{ cat.name }}</a></li>
+                <li  *ngFor='let cat of categories' ><a [routerLink]="['items/',cat.id]">{{ cat.name }}</a></li>
             </ul>
         </div>
     </div>
