--- a/frontend/src/app/store/store-main/store-header/store-header.component.html
+++ b/frontend/src/app/store/store-main/store-header/store-header.component.html
@@ -1,8 +1,10 @@
 <div class="store-header row align-items-center">
-  <div class="store-title store-center col-md-3">
+
+  <div class="store-title store-center col-md-3" [routerLink]="['/']"  style="cursor: pointer;" >
     <h2>GTU SHOP</h2>
     <p>Online store</p>
   </div>
+  
   <div class="store-search store-center col-md-6">
     <input type="text" class="form-control" />
     <button class="btn btn-primary">Search</button>
