--- a/frontend/src/app/store/store-main/store-item-detailed/store-item-detailed.component.html
+++ b/frontend/src/app/store/store-main/store-item-detailed/store-item-detailed.component.html
@@ -1,3 +1,18 @@
+
+
+
 <div *ngIf='( $product | async ) as product '>
+        <h1>{{  product.title  }}</h1>
+
      <app-slider [images]='product.images'></app-slider>
+
+     <h1>{{  product.price  }}</h1>
+
+     <h1>{{  product.description  }}</h1>
+
+     <h1>{{  product.created_at | date  }}</h1>
+
+
 </div>
+
+
