--- a/frontend/src/app/store/store-main/store-items/store-item/store-item.component.html
+++ b/frontend/src/app/store/store-main/store-items/store-item/store-item.component.html
@@ -3,7 +3,7 @@
         <div class="col-4  mb-3" *ngFor='let item of products ' style="height: 264px;">
             <div class="item-box" style="height: 100%;">
                 <div class="item-box-image" [routerLink]='["/store/item/"+item.id]' style="width: 100%; cursor: pointer;"> 
-                    <img [src]="item.images.length > 0 ? item.images[0].image.url : 'assets/img/pc1.png'" alt="item">
+                    <img [src]="item.image ? item.image  : 'assets/img/pc1.png'" alt="item">
                 </div>
                 <div class="item-box-price pl-2">
                     <h5 *ngIf='item.price'>{{ item.price  }}</h5>
@@ -14,7 +14,7 @@
                 <div class="item-text-description pl-2">
                     <p *ngIf='item.description'>{{ item.description }}</p>
                 </div>
-                <div class="row pl-2">
+                <div class="row pl-2 pb-2">
                     <div class="col-2">
                         <fa-icon [icon]="faShoppingCart" class="custom-svg"></fa-icon>
                     </div>  
@@ -32,6 +32,16 @@
         </div>
     
     </div>
+
+     <!-- ngb-pagination -->
+    <div class="d-flex justify-content-end">
+        <ngb-pagination [(page)]="page"
+                        [pageSize]="10"
+                        [collectionSize]="products.length">
+        </ngb-pagination>
+    </div>
+
+
 </ng-container>
 <ng-container *ngIf='!loading'>
   <app-spinner></app-spinner>
