--- a/frontend/src/app/user-panel/user-panel.component.html
+++ b/frontend/src/app/user-panel/user-panel.component.html
@@ -10,7 +10,7 @@
                     <fa-icon [icon]="faPlusSquare" class="custom-svg">
                     </fa-icon>
                 </div>
-                <div class="panel-btn remove ml-3">
+                <div class="panel-btn remove ml-3" (click)='removeItem()' style="cursor: pointer;">
                         <fa-icon [icon]="faTrash" class="custom-svg">
                         </fa-icon>
                 </div>
