--- a/frontend/src/app/authorization/register/register.component.html
+++ b/frontend/src/app/authorization/register/register.component.html
@@ -42,7 +42,7 @@
                                        [ngClass]="{'is-invalid': submitted &&  regCtrls.first_name.errors}"
                                        >
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 mt-3">
                             <div class="d-flex justify-content-end">
                                 <button class="btn btn-primary">
                                     Register
