--- a/frontend/src/app/store/store-main/site-offers/site-offers.component.html
+++ b/frontend/src/app/store/store-main/site-offers/site-offers.component.html
@@ -2,7 +2,7 @@
 <div class="offers-wrapper d-flex justify-content-center align-items-center mt-3">
     <div class="col-9">
         <div class="row pl-0">
-            <div class="col-4 pr-0">
+            <div class="col-md-4 pr-0">
                  <div class="offers  d-flex align-items-center justify-content-center">
                         <div class="info text-center">
                         <fa-icon [icon]="plane" class="custom-svg"></fa-icon>
@@ -11,7 +11,7 @@
                         </div>
                  </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                     <div class="offers  d-flex align-items-center justify-content-center">
                         <div class="info text-center">
                         <fa-icon [icon]="faGlobeAmericas" class="custom-svg"></fa-icon>
@@ -20,7 +20,7 @@
                         </div>
                     </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                     <div class="offers  d-flex align-items-center justify-content-center">
                          <div class="info text-center">
                         <fa-icon [icon]="faThumbsUp" class="custom-svg"></fa-icon>
