--- a/frontend/src/app/store/store-main/store-header/store-header.component.html
+++ b/frontend/src/app/store/store-main/store-header/store-header.component.html
@@ -7,7 +7,9 @@
   
   <div class="store-search store-center col-md-6">
     <input type="text" class="form-control" />
-    <button class="btn btn-primary">Search</button>
+    <button class="btn btn-primary">
+      
+    </button>
   </div>
   <div class="store-contact store-center col-md-3 d-flex align-items-center justify-content-center">
     <fa-icon [icon]="faPhone"></fa-icon>
