--- a/frontend/src/app/user-panel/add-item/add-item.component.scss
+++ b/frontend/src/app/user-panel/add-item/add-item.component.scss
@@ -24,14 +24,20 @@
         min-height: 448px;
         .added-product-image {
             position: relative;
-            img {
-                width: 100%;
-                height: 300px;
-                object-fit: contain;
+            .product-image-container {
+                width: 382px;
+                height: 382px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
             a {
                 position: absolute;
                 background: $dark-blue;
+                right: 6px;
+                top: -8px;
                 width: 25px;
                 height: 25px;
                 text-align: center;
