--- a/frontend/src/app/store/store-main/wishlist/wishlist.component.html
+++ b/frontend/src/app/store/store-main/wishlist/wishlist.component.html
@@ -1,1 +1,4 @@
-<p>wishlist works!</p>
+
+ <div class="mt-3">
+     <app-item-list [data]='favourites' [isFavourite]='true'></app-item-list>
+ </div>
