--- a/frontend/src/app/user-panel/add-item/add-item.component.html
+++ b/frontend/src/app/user-panel/add-item/add-item.component.html
@@ -85,8 +85,8 @@
   </div>
   <div class="col-12">
     <div class="add-product-form" *ngIf='!editId'>
-      
-           <app-item-list></app-item-list>
+        
+           <app-item-list [data]='addedProducts'></app-item-list>
 
      </div>
   </div>
